# hoops-edge-predictor

./: .gitignore  Makefile  README.md  pyproject.toml
artifacts/: betting_strategy.json  feature_order.json  feature_order_v1.json  feature_order_v2.json  feature_order_v3.json  feature_order_v4.json  feature_order_v5.json  optimal_ewm_spans.json  scaler.pkl  session15_walkforward_results.json  session16_walkforward_results.json  team_name_mapping.json
checkpoints/: classifier.pt  regressor.pt
docs/: session14_killshot_eda.md
reports/: clean_holdout_backtest_2025.md  feature_expansion_2025.md  feature_importance_2025.md  feature_selection_2025.md  head_to_head_data_2025.csv  ml_backtest_2025.md  multi_season_sigma_backtest.md  session13_validation_summary.md
scripts/: analyze_pick_bias.py  away_bias_analysis.py  backtest_2025.py  build_adjusted_features.py  build_features_v3.py  build_features_v4.py  build_features_v5.py  compare_variants.py  debug_nan_mismatch.py  ewm_span_sweep.py  feature_analysis.py  feature_expansion_eval.py  feature_pruning_analysis.py  feature_selection.py  fix_spread_signs.py  generate_h2h_data.py  hca_walkforward_comparison.py  inspect_hca_weights.py  investigate_zero_games.py  multi_season_backtest.py  overnight_v3_pipeline.sh  profile_v2_pipeline.py  publish_daily.sh  refresh_lines.py  run_adjusted_ff_eval.py  s3_finals_to_json.py  session13_betting_strategy.py  session13_remaining_tests.py  session13_targeted_walkforward.py  session13_validation_suite.py  session15_arch_sweep.py  session15_walkforward.py  session16_walkforward.py  (+5 more)
(+3115 files in other folders)
