[tool.poetry]
name = "hoops-edge-predictor"
version = "0.1.0"
description = "College basketball game predictions using PyTorch MLP, reading from the hoops-edge S3 lakehouse"
authors = ["Derek Nursey"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0"
pandas = "^2.0"
pyarrow = ">=14.0"
boto3 = "^1.28"
click = "^8.0"
scikit-learn = "^1.3"
optuna = "^3.0"
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"

[tool.poetry.scripts]
hoops = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
